Issue32: center content of landing, formulas of complex emotions added (#44)
* Landing: center content with left and right margins on too wide displays
Fixes #32

* Landing: center content with left and right margins on too wide displays, formulas of complex emotions added
Fixes #32

* fix: min-content Landing: center content with left and right margins on too wide displays
Fixes #32

---------

--- a/landing/src/components/market/market.css
+++ b/landing/src/components/market/market.css
@@ -13,6 +13,7 @@
 
 .market-caption {
     font-size: x-large;
+    padding-bottom: 10px;
 }
 
 .market-description {
